# sentiment_data_sets

./: .env.example  .gitignore  README.md  build_hf_dataset_sharegpt.py  fix_processed_records.py  join_outputs.py  process_articles.py  process_financial_phrase_bank.py  process_tweets.py  pyproject.toml  step-01-process_tweets.py  step-02-process_financial_phrase_bank.py  step-03-process_articles.py  step-03b-process_phrase_bank_symbolic.py  step-04-join_outputs.py  step-05-build_hf_dataset_sharegpt.py
data/: processed_records.txt  testing_data.csv
data/FinancialPhraseBank-v1.0/: Sentences_50Agree_output.csv  Sentences_66Agree_output.csv  Sentences_75Agree_output.csv  Sentences_AllAgree_output.csv
data/inputs/articles/: Business_News.csv  Covid_News.csv  Covid_and_Vaccine_News.csv  Entertainment_News.csv  Health_News.csv  Latest_News.csv  Science_&_Technology_News.csv  World_Politics_News.csv
data/outputs/: All_Sentences_output.csv  Processed_Tweets_output.csv
messages/: system_message.txt  system_message_symbolic.txt  user_message.txt  user_message_symbolic.txt
utils/: build_hf_dataset.py  sentiment_response.py  split_data_for_training.py  utils.py
